@@ -13,7 +13,7 @@
     <script type="text/javascript" src="/js/scw.js"></script>
     <script type="text/javascript" src="/js/wz_jsgraphics.js"></script>
     <script type="text/javascript" src="/js/pie.js"></script>
-    <script type="text/javascript" src="/openflights.js?version=20081004"></script>
+    <script type="text/javascript" src="/openflights.js?version=20081010"></script>
   </head>
 
   <body>
